--- a/titlepage.tex
+++ b/titlepage.tex
@@ -71,11 +71,11 @@
 	\end{center}	
 	
 	\begin{textblock}{10}[0,0](4.1,13.9)
-		\includegraphics[width=.65\textwidth]{NCT_Dresden_Logo_High.pdf}
+		\includegraphics[width=.65\textwidth]{images/logos/NCT_Dresden_Logo_High.pdf}
 	\end{textblock}
 	\begin{textblock}{10}[0,0](11.7,13.9)
 		%\raggedleft		% Shift to the left
-		\includegraphics[width=.4\textwidth]{TU_Dresden_Logo_HKS41.pdf}
+		\includegraphics[width=.4\textwidth]{images/logos/TU_Dresden_Logo_HKS41.pdf}
 	\end{textblock}
 
 	%\begin{textblock}[0,0](4,12)
