Added more descriptions and readme chapter.

--- a/thesis.tex
+++ b/thesis.tex
@@ -71,7 +71,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
-% Remove the following line for German text
+% Uncomment the following line for English text
 %\selectlanguage{english}
 \frontmatter
 \pagenumbering{roman}
@@ -131,6 +131,7 @@ Short description of motivation, methods, results and discussion
 %it is preferable to create a file for each chapter of the document
 \mainmatter
 \pagenumbering{arabic}
+\include{chapters/readme}
 \include{chapters/introduction}
 \include{chapters/state_of_art}
 \include{chapters/methods}
