--- a/titlepage.tex
+++ b/titlepage.tex
@@ -58,7 +58,11 @@
 	\end{center}	
 	
 	\begin{textblock}{10}[0,0](4.1,14.8)
-		\includegraphics[width=.65\textwidth]{images/logos/NCT_Dresden_zweispaltig_englisch.pdf}
+		\iflanguage{english}{
+				\includegraphics[width=.65\textwidth]{images/logos/NCT_Dresden_zweispaltig_englisch.pdf}
+			}{
+				\includegraphics[width=.67\textwidth]{images/logos/NCT_Dresden_zweispaltig.pdf}
+			}
 	\end{textblock}
 	\begin{textblock}{10}[0,0](11.7,14.8)
 		%\raggedleft		% Shift to the left
