Added Theoretical Background chapter.

--- a/thesis.tex
+++ b/thesis.tex
@@ -134,6 +134,7 @@ Short description of motivation, methods, results and discussion
 \include{chapters/readme}
 \include{chapters/introduction}
 \include{chapters/state_of_art}
+\include{chapters/theoreticalBackground}
 \include{chapters/methods}
 \include{chapters/evaluation}
 \include{chapters/conclusion}
