HMD, first related work

--- a/thesis.tex
+++ b/thesis.tex
@@ -24,12 +24,12 @@
 %% | Information about the thesis  |
 %% ---------------------------------
 
-\newcommand{\myname}{Firstname Surname}
-\newcommand{\mytitle}{This is the Title of your\\very Awesome Thesis\\It's long to test line breaking}
+\newcommand{\myname}{Antonia Gerdes}
+\newcommand{\mytitle}{Visualisierung der Leber mit Hilfe\\der Microsoft Hololens und\\Marker-Basiertem Tracking\\an einem Phantom}
 
 \newcommand{\reviewerone}{Prof. Dr.-Ing. Stefanie Speidel}
 \newcommand{\reviewertwo}{xxxxxx}
-\newcommand{\advisor}{xxxxxx}
+\newcommand{\advisor}{Micha Pfeiffer}
 % If there is a second advisor, uncomment in titlepage.tex!
 \newcommand{\advisortwo}{?}
 
@@ -77,6 +77,7 @@
 \pagenumbering{roman}
 \include{titlepage}
 \blankpage
+\renewcommand{\figurename}{Abb.}
 
 \thispagestyle{empty}
 $\mbox{}$\vspace{15cm}$\mbox{}$\\
