--- a/titlepage.tex
+++ b/titlepage.tex
@@ -26,7 +26,7 @@
 		\vspace*{1.5cm}
 		\\
 		\Large{
-			\iflanguage{english}{Master Thesis}												  {Masterarbeit}
+			\iflanguage{english}{Bachelor's Thesis}												  {Bachelorarbeit}
 		}\\
 		\vspace*{1cm}
 		\huge{\myname}
