--- a/thesis.tex
+++ b/thesis.tex
@@ -25,16 +25,16 @@
 %% ---------------------------------
 
 \newcommand{\myname}{Antonia Gerdes}
-\newcommand{\mytitle}{Visualisierung der Leber mit Hilfe\\der Microsoft Hololens und\\Marker-Basiertem Tracking\\an einem Phantom}
+\newcommand{\mytitle}{Holographische Visualisierung der Leber mit markergestütztem Tracking an einem Phantom}
 
 \newcommand{\reviewerone}{Prof. Dr.-Ing. Stefanie Speidel}
-\newcommand{\reviewertwo}{xxxxxx}
+\newcommand{\reviewertwo}{Dr.-Ing. Sebastian Bodenstedt}
 \newcommand{\advisor}{Micha Pfeiffer}
 % If there is a second advisor, uncomment in titlepage.tex!
 \newcommand{\advisortwo}{?}
 
-\newcommand{\timestart}{December 19, 20XX}
-\newcommand{\timeend}{June 19, 20XX}
+\newcommand{\timestart}{Juli 08, 2019}
+\newcommand{\timeend}{September 23, 2019}
 \newcommand{\submissiontime}{19. Monat 20XX}
 
 
