--- a/thesis.tex
+++ b/thesis.tex
@@ -132,7 +132,7 @@ Short description of motivation, methods, results and discussion
 %it is preferable to create a file for each chapter of the document
 \mainmatter
 \pagenumbering{arabic}
-\include{chapters/readme}
+%\include{chapters/readme}
 \include{chapters/introduction}
 \include{chapters/state_of_art}
 \include{chapters/theoreticalBackground}
