Grundlagen draft 1 fertig

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -464,7 +464,7 @@ Augmented reality tools like X-Scope® may be helpful for controlling maxillary 
 	title = {{OpenHELP} ({Heidelberg} laparoscopy phantom): development of an open-source surgical evaluation and training tool {\textbar} {SpringerLink}},
 	url = {https://link.springer.com/article/10.1007/s00464-015-4094-0},
 	urldate = {2019-04-04},
-	file = {OpenHELP (Heidelberg laparoscopy phantom)\: development of an open-source surgical evaluation and training tool | SpringerLink:C\:\\Users\\anton\\Zotero\\storage\\7NLX2N7I\\s00464-015-4094-0.html:text/html}
+	file = {OpenHELP (Heidelberg laparoscopy phantom) develop.pdf:C\:\\Users\\anton\\Zotero\\storage\\IQEWWYQS\\OpenHELP (Heidelberg laparoscopy phantom) develop.pdf:application/pdf;OpenHELP (Heidelberg laparoscopy phantom)\: development of an open-source surgical evaluation and training tool | SpringerLink:C\:\\Users\\anton\\Zotero\\storage\\7NLX2N7I\\s00464-015-4094-0.html:text/html}
 }
 
 @article{paredes_vuforia_nodate,
@@ -847,7 +847,7 @@ Conclusions First promising results under laboratory conditions indicate that pr
 	author = {MILGRAM, Paul and KISHINO, Fumio},
 	month = dec,
 	year = {1994},
-	file = {Snapshot:C\:\\Users\\anton\\Zotero\\storage\\8D2G38Z9\\summary.html:text/html}
+	file = {Kishino - httpvered.rose.utoronto.capeoplepaul_dirIEIC.pdf:C\:\\Users\\anton\\Zotero\\storage\\9TEFMCDR\\Kishino - httpvered.rose.utoronto.capeoplepaul_dirIEIC.pdf:application/pdf;Snapshot:C\:\\Users\\anton\\Zotero\\storage\\8D2G38Z9\\summary.html:text/html}
 }
 
 @article{noauthor_windows_nodate,
@@ -875,4 +875,115 @@ Conclusions First promising results under laboratory conditions indicate that pr
 	urldate = {2019-06-25},
 	author = {Bray, Brandon and v-stdemo and McCulloch, Jesse and Schonning, Nick and Zeller, Matt},
 	file = {Snapshot:C\:\\Users\\anton\\Zotero\\storage\\Q7NDVIE6\\mixed-reality.html:text/html}
+}
+
+@article{kishino_http://vered.rose.utoronto.ca/people/paul_dir/ieice94/ieice.htm_nodate,
+	title = {http://vered.rose.utoronto.ca/people/paul\_dir/{IEICE}94/ieice.htm},
+	language = {en},
+	author = {Kishino, Fumio},
+	pages = {16}
+}
+
+@book{kenngott_mobile_2018,
+	title = {Mobile, real-time, and point-of-care augmented reality is robust, accurate, and feasible: a prospective pilot study},
+	volume = {32},
+	shorttitle = {Mobile, real-time, and point-of-care augmented reality is robust, accurate, and feasible},
+	abstract = {Background
+Augmented reality (AR) systems are currently being explored by a broad spectrum of industries, mainly for improving point-of-care access to data and images. Especially in surgery and especially for timely decisions in emergency cases, a fast and comprehensive access to images at the patient bedside is mandatory. Currently, imaging data are accessed at a distance from the patient both in time and space, i.e., at a specific workstation. Mobile technology and 3-dimensional (3D) visualization of radiological imaging data promise to overcome these restrictions by making bedside AR feasible.
+
+Methods
+In this project, AR was realized in a surgical setting by fusing a 3D-representation of structures of interest with live camera images on a tablet computer using marker-based registration. The intent of this study was to focus on a thorough evaluation of AR. Feasibility, robustness, and accuracy were thus evaluated consecutively in a phantom model and a porcine model. Additionally feasibility was evaluated in one male volunteer.
+
+Results
+In the phantom model (n = 10), AR visualization was feasible in 84\% of the visualization space with high accuracy (mean reprojection error ± standard deviation (SD): 2.8 ± 2.7 mm; 95th percentile = 6.7 mm). In a porcine model (n = 5), AR visualization was feasible in 79\% with high accuracy (mean reprojection error ± SD: 3.5 ± 3.0 mm; 95th percentile = 9.5 mm). Furthermore, AR was successfully used and proved feasible within a male volunteer.
+
+Conclusions
+Mobile, real-time, and point-of-care AR for clinical purposes proved feasible, robust, and accurate in the phantom, animal, and single-trial human model shown in this study. Consequently, AR following similar implementation proved robust and accurate enough to be evaluated in clinical trials assessing accuracy, robustness in clinical reality, as well as integration into the clinical workflow. If these further studies prove successful, AR might revolutionize data access at patient bedside.},
+	author = {Kenngott, Hannes and Amin Preukschas, Anas and Wagner, Martin and Nickel, Felix and Müller, Michael and Bellemann, Nadine and Stock, Christian and Fangerau, Markus and Radeleff, Boris and Kauczor, Hans-Ulrich and Meinzer, Hans-Peter and Maier-Hein, Lena and Peter Müller-Stich, Beat},
+	month = jun,
+	year = {2018},
+	doi = {10.1007/s00464-018-6151-y}
+}
+
+@article{kenngott_mobile_2018-1,
+	title = {Mobile, real-time, and point-of-care augmented reality is robust, accurate, and feasible: a prospective pilot study},
+	volume = {32},
+	issn = {0930-2794, 1432-2218},
+	shorttitle = {Mobile, real-time, and point-of-care augmented reality is robust, accurate, and feasible},
+	url = {http://link.springer.com/10.1007/s00464-018-6151-y},
+	doi = {10.1007/s00464-018-6151-y},
+	abstract = {Background  Augmented reality (AR) systems are currently being explored by a broad spectrum of industries, mainly for improving point-of-care access to data and images. Especially in surgery and especially for timely decisions in emergency cases, a fast and comprehensive access to images at the patient bedside is mandatory. Currently, imaging data are accessed at a distance from the patient both in time and space, i.e., at a specific workstation. Mobile technology and 3-dimensional (3D) visualization of radiological imaging data promise to overcome these restrictions by making bedside AR feasible.
+Methods  In this project, AR was realized in a surgical setting by fusing a 3D-representation of structures of interest with live camera images on a tablet computer using marker-based registration. The intent of this study was to focus on a thorough evaluation of AR. Feasibility, robustness, and accuracy were thus evaluated consecutively in a phantom model and a porcine model. Additionally feasibility was evaluated in one male volunteer.
+Results  In the phantom model (n = 10), AR visualization was feasible in 84\% of the visualization space with high accuracy (mean reprojection error ± standard deviation (SD): 2.8 ± 2.7 mm; 95th percentile = 6.7 mm). In a porcine model (n = 5), AR visualization was feasible in 79\% with high accuracy (mean reprojection error ± SD: 3.5 ± 3.0 mm; 95th percentile = 9.5 mm). Furthermore, AR was successfully used and proved feasible within a male volunteer.
+Conclusions  Mobile, real-time, and point-of-care AR for clinical purposes proved feasible, robust, and accurate in the phantom, animal, and single-trial human model shown in this study. Consequently, AR following similar implementation proved robust and accurate enough to be evaluated in clinical trials assessing accuracy, robustness in clinical reality, as well as integration into the clinical workflow. If these further studies prove successful, AR might revolutionize data access at patient bedside.},
+	language = {en},
+	number = {6},
+	urldate = {2019-07-16},
+	journal = {Surgical Endoscopy},
+	author = {Kenngott, Hannes Götz and Preukschas, Anas Amin and Wagner, Martin and Nickel, Felix and Müller, Michael and Bellemann, Nadine and Stock, Christian and Fangerau, Markus and Radeleff, Boris and Kauczor, Hans-Ulrich and Meinzer, Hans-Peter and Maier-Hein, Lena and Müller-Stich, Beat Peter},
+	month = jun,
+	year = {2018},
+	pages = {2958--2967},
+	file = {Kenngott et al. - 2018 - Mobile, real-time, and point-of-care augmented rea.pdf:C\:\\Users\\anton\\Zotero\\storage\\CQQXES3F\\Kenngott et al. - 2018 - Mobile, real-time, and point-of-care augmented rea.pdf:application/pdf}
+}
+
+@article{teber_-vitro_2010,
+	title = {In-{Vitro} {Evaluation} of a {Soft}-{Tissue} {Navigation} {System} for {Laparoscopic} {Prostatectomy}},
+	volume = {24},
+	issn = {0892-7790},
+	url = {https://www.liebertpub.com/doi/full/10.1089/end.2009.0289},
+	doi = {10.1089/end.2009.0289},
+	abstract = {Purpose: We introduce a custom-designed phantom model for the in-vitro evaluation of an augmented reality-based soft-tissue navigation system for ultrasound-guided prostate interventions.Materials and Methods: Transrectal ultrasound segmentation of the prostate, navigation aid placement, initial registration, endoscope tracking, and enhanced visualization steps in the navigation procedure were performed to accommodate the actual prostatic motion. In-vitro laparoscopic manipulations simulating surgical procedures were performed by a physician using human prostate specimens. The target visualization error, defining the accuracy of the tracking, is determined by means of a leave-out test strategy by alternately using four navigation aids for endoscope registration and the remaining two navigation aids for accuracy verification.Results: The introduction of the navigation aids lasted approximately 3 minutes. The navigation aids and especially their barbs were visible because of their ultrasound reflecting nature. For each organ, 1000 endoscope registrations were calculated, in which two randomly chosen navigation aids served the purpose of verifying the pose. We were able to demonstrate that the superimposed image could follow automatically the videoendoscopic real-time view. The mean target visualization errors for the respective trials were determined as 0.81 (±0.12) mm, 0.62 (±0.14) mm, and 0.98 (±0.23) mm.Conclusions: The ultrasound-based inside-out navigation system for laparoscopic prostatectomy overcomes the problem of tissue shift and deformation in an in-vitro model. In case of organ movement, the augmented picture with the detected navigation aids could follow the videoendoscopic image using the navigation aids as landmarks.},
+	number = {9},
+	urldate = {2019-07-26},
+	journal = {Journal of Endourology},
+	author = {Teber, Dogu and Simpfendörfer, Tobias and Guven, Selcuk and Baumhauer, Matthias and Gözen, Ali Serdar and Rassweiler, Jens},
+	month = aug,
+	year = {2010},
+	pages = {1487--1491},
+	file = {Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\EC2TXZFP\\Teber et al. - 2010 - In-Vitro Evaluation of a Soft-Tissue Navigation Sy.pdf:application/pdf;Snapshot:C\:\\Users\\anton\\Zotero\\storage\\YVK3HGWA\\end.2009.html:text/html}
+}
+
+@article{simpfendorfer_augmented_2011,
+	title = {Augmented {Reality} {Visualization} {During} {Laparoscopic} {Radical} {Prostatectomy}},
+	volume = {25},
+	issn = {0892-7790},
+	url = {https://www.liebertpub.com/doi/full/10.1089/end.2010.0724},
+	doi = {10.1089/end.2010.0724},
+	abstract = {Purpose: We present an augmented reality (AR) navigation system that conveys virtual organ models generated from transrectal ultrasonography (TRUS) onto a real laparoscopic video during radical prostatectomy. By providing this additional information about the actual anatomy, we can support surgeons in their working decisions. This work reports the system's first in-vivo application.Materials and Methods: The system uses custom-developed needles with colored heads that are inserted into the prostate as soon as the organ surface is uncovered. These navigation aids are once segmented in three-dimensional (3D) TRUS data that is acquired right after the placement of the needles and then continuously tracked in the laparoscopic video images by the surgical navigation system. The navigation system traces the navigation aids in real time and computes a registration between TRUS image and laparoscopic video based on the two-dimensional-three dimensional (2D-3D) point correspondences. With this registration, the system correctly superimposes TRUS-based 3D information on an additional AR monitor placed next to the normal laparoscopic screen. Surgical navigation guidance took place until the prostate was removed from the rectal wall. Finally, the navigation aids were removed together with the specimen inside the specimen bag.Results: The initial human in-vivo application of the surgical navigation system was successful. No complications occurred, the prostate was removed together with the navigation aids, and the system supported the surgeons as intended with an AR visualization in real time. In case of tissue deformations, changes in the spatial configuration of the navigation aids are detected, which preserves the system from erroneous navigation visualization.Conclusions: Feasibility of the navigation system was shown in the first in-vivo application. TRUS information could be superimposed via AR in real time. To show the benefit for the patient, results obtained from a larger number of trials are needed.},
+	number = {12},
+	urldate = {2019-07-26},
+	journal = {Journal of Endourology},
+	author = {Simpfendörfer, Tobias and Baumhauer, Matthias and Müller, Michael and Gutt, Carsten N. and Meinzer, Hans-Peter and Rassweiler, Jens J. and Guven, Selcuk and Teber, Dogu},
+	month = oct,
+	year = {2011},
+	pages = {1841--1845},
+	file = {Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\WRDMVA8U\\Simpfendörfer et al. - 2011 - Augmented Reality Visualization During Laparoscopi.pdf:application/pdf;Snapshot:C\:\\Users\\anton\\Zotero\\storage\\PQX8GM9G\\end.2010.html:text/html}
+}
+
+@article{muller_mobile_2013,
+	title = {Mobile augmented reality for computer-assisted percutaneous nephrolithotomy},
+	volume = {8},
+	issn = {1861-6429},
+	url = {https://doi.org/10.1007/s11548-013-0828-4},
+	doi = {10.1007/s11548-013-0828-4},
+	abstract = {Purpose Percutaneous nephrolithotomy (PCNL) plays an integral role in treatment of renal stones. Creating percutaneous renal access is the most important and challenging step in the procedure. To facilitate this step, we evaluated our novel mobile augmented reality (AR) system for its feasibility of use for PCNL.Methods A tablet computer, such as an iPad®®{\textasciicircum}\{{\textbackslash}circledR \}, is positioned above the patient with its camera pointing toward the field of intervention. The images of the tablet camera are registered with the CT image by means of fiducial markers. Structures of interest can be superimposed semi-transparently on the video images. We present a systematic evaluation by means of a phantom study. An urological trainee and two experts conducted 53 punctures on kidney phantoms.Results The trainee performed best with the proposed AR system in terms of puncturing time (mean: 99 s), whereas the experts performed best with fluoroscopy (mean: 59 s). iPad assistance lowered radiation exposure by a factor of 3 for the inexperienced physician and by a factor of 1.8 for the experts in comparison with fluoroscopy usage. We achieve a mean visualization accuracy of 2.5 mm.Conclusions The proposed tablet computer-based AR system has proven helpful in assisting percutaneous interventions such as PCNL and shows benefits compared to other state-of-the-art assistance systems. A drawback of the system in its current state is the lack of depth information. Despite that, the simple integration into the clinical workflow highlights the potential impact of this approach to such interventions.},
+	language = {en},
+	number = {4},
+	urldate = {2019-07-26},
+	journal = {International Journal of Computer Assisted Radiology and Surgery},
+	author = {Müller, Michael and Rassweiler, Marie-Claire and Klein, Jan and Seitel, Alexander and Gondan, Matthias and Baumhauer, Matthias and Teber, Dogu and Rassweiler, Jens J. and Meinzer, Hans-Peter and Maier-Hein, Lena},
+	month = jul,
+	year = {2013},
+	keywords = {Augmented reality, Computer vision, CT, Image-guided surgery, Mobile},
+	pages = {663--675},
+	file = {Springer Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\4BGRXSAY\\Müller et al. - 2013 - Mobile augmented reality for computer-assisted per.pdf:application/pdf}
+}
+
+@article{szeliski_computer_nodate,
+	title = {Computer {Vision}: {Algorithms} and {Applications}},
+	language = {en},
+	author = {Szeliski, Richard},
+	pages = {979},
+	file = {Szeliski - Computer Vision Algorithms and Applications.pdf:C\:\\Users\\anton\\Zotero\\storage\\L83YS7C9\\Szeliski - Computer Vision Algorithms and Applications.pdf:application/pdf}
 }
