--- a/bibliography.bib
+++ b/bibliography.bib
@@ -987,3 +987,72 @@ Conclusions  Mobile, real-time, and point-of-care AR for clinical purposes pro
 	pages = {979},
 	file = {Szeliski - Computer Vision Algorithms and Applications.pdf:C\:\\Users\\anton\\Zotero\\storage\\L83YS7C9\\Szeliski - Computer Vision Algorithms and Applications.pdf:application/pdf}
 }
+
+@misc{noauthor_doi:10.1016/j.ijom.2004.03.018_nodate,
+	title = {doi:10.1016/j.ijom.2004.03.018 {\textbar} {Elsevier} {Enhanced} {Reader}},
+	url = {https://reader.elsevier.com/reader/sd/pii/S090150270400102X?token=34E589A78C13E8251D31C2D0CC18FA61AD37A0EE4A2E36AD59B0A59B3C583F3F621AB629EDBF9AEEC595788673EBB2C8},
+	urldate = {2019-08-04},
+	file = {doi\:10.1016/j.ijom.2004.03.018 | Elsevier Enhanced Reader:C\:\\Users\\anton\\Zotero\\storage\\9YZ377PN\\S090150270400102X.html:text/html;doi10.1016j.ijom.2004.03.018  Elsevier Enhanced.pdf:C\:\\Users\\anton\\Zotero\\storage\\TC7GXYKF\\doi10.1016j.ijom.2004.03.018  Elsevier Enhanced.pdf:application/pdf}
+}
+
+@misc{noauthor_basic_nodate,
+	title = {Basic research and 12 years of clinical experience in computer-assisted navigation technology: a review - {ScienceDirect}},
+	url = {https://www.sciencedirect.com/science/article/pii/S090150270400102X},
+	urldate = {2019-08-04},
+	file = {Basic research and 12 years of clinical experience in computer-assisted navigation technology\: a review - ScienceDirect:C\:\\Users\\anton\\Zotero\\storage\\IJUBUTUK\\S090150270400102X.html:text/html;Basic research and 12 years of clinical experience.pdf:C\:\\Users\\anton\\Zotero\\storage\\SVAVUK22\\Basic research and 12 years of clinical experience.pdf:application/pdf}
+}
+
+@article{garrido-jurado_automatic_2014-2,
+	title = {Automatic generation and detection of highly reliable fiducial markers under occlusion},
+	volume = {47},
+	issn = {00313203},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0031320314000235},
+	doi = {10.1016/j.patcog.2014.01.005},
+	abstract = {This paper presents a ﬁducial marker system specially appropriated for camera pose estimation in applications such as augmented reality and robot localization. Three main contributions are presented. First, we propose an algorithm for generating conﬁgurable marker dictionaries (in size and number of bits) following a criterion to maximize the inter-marker distance and the number of bit transitions. In the process, we derive the maximum theoretical inter-marker distance that dictionaries of square binary markers can have. Second, a method for automatically detecting the markers and correcting possible errors is proposed. Third, a solution to the occlusion problem in augmented reality applications is shown. To that aim, multiple markers are combined with an occlusion mask calculated by color segmentation. The experiments conducted show that our proposal obtains dictionaries with higher inter-marker distances and lower false negative rates than state-of-the-art systems, and provides an effective solution to the occlusion problem.},
+	language = {en},
+	number = {6},
+	urldate = {2019-08-04},
+	journal = {Pattern Recognition},
+	author = {Garrido-Jurado, S. and Muñoz-Salinas, R. and Madrid-Cuevas, F.J. and Marín-Jiménez, M.J.},
+	month = jun,
+	year = {2014},
+	pages = {2280--2292},
+	file = {Garrido-Jurado et al. - 2014 - Automatic generation and detection of highly relia.pdf:C\:\\Users\\anton\\Zotero\\storage\\3E2GFPFT\\Garrido-Jurado et al. - 2014 - Automatic generation and detection of highly relia.pdf:application/pdf}
+}
+
+@article{garrido-jurado_automatic_2014-3,
+	title = {Automatic generation and detection of highly reliable fiducial markers under occlusion},
+	volume = {47},
+	issn = {00313203},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0031320314000235},
+	doi = {10.1016/j.patcog.2014.01.005},
+	abstract = {This paper presents a ﬁducial marker system specially appropriated for camera pose estimation in applications such as augmented reality and robot localization. Three main contributions are presented. First, we propose an algorithm for generating conﬁgurable marker dictionaries (in size and number of bits) following a criterion to maximize the inter-marker distance and the number of bit transitions. In the process, we derive the maximum theoretical inter-marker distance that dictionaries of square binary markers can have. Second, a method for automatically detecting the markers and correcting possible errors is proposed. Third, a solution to the occlusion problem in augmented reality applications is shown. To that aim, multiple markers are combined with an occlusion mask calculated by color segmentation. The experiments conducted show that our proposal obtains dictionaries with higher inter-marker distances and lower false negative rates than state-of-the-art systems, and provides an effective solution to the occlusion problem.},
+	language = {en},
+	number = {6},
+	urldate = {2019-08-04},
+	journal = {Pattern Recognition},
+	author = {Garrido-Jurado, S. and Muñoz-Salinas, R. and Madrid-Cuevas, F.J. and Marín-Jiménez, M.J.},
+	month = jun,
+	year = {2014},
+	pages = {2280--2292},
+	file = {Garrido-Jurado et al. - 2014 - Automatic generation and detection of highly relia.pdf:C\:\\Users\\anton\\Zotero\\storage\\QECFTMI6\\Garrido-Jurado et al. - 2014 - Automatic generation and detection of highly relia.pdf:application/pdf}
+}
+
+@article{qian_comparison_2017,
+	title = {Comparison of optical see-through head-mounted displays for surgical interventions with object-anchored 2D-display},
+	volume = {12},
+	issn = {1861-6429},
+	url = {https://doi.org/10.1007/s11548-017-1564-y},
+	doi = {10.1007/s11548-017-1564-y},
+	abstract = {PurposeOptical see-through head-mounted displays (OST-HMD) feature an unhindered and instantaneous view of the surgery site and can enable a mixed reality experience for surgeons during procedures. In this paper, we present a systematic approach to identify the criteria for evaluation of OST-HMD technologies for specific clinical scenarios, which benefit from using an object-anchored 2D-display visualizing medical information.MethodsCriteria for evaluating the performance of OST-HMDs for visualization of medical information and its usage are identified and proposed. These include text readability, contrast perception, task load, frame rate, and system lag. We choose to compare three commercially available OST-HMDs, which are representatives of currently available head-mounted display technologies. A multi-user study and an offline experiment are conducted to evaluate their performance.ResultsStatistical analysis demonstrates that Microsoft HoloLens performs best among the three tested OST-HMDs, in terms of contrast perception, task load, and frame rate, while ODG R-7 offers similar text readability. The integration of indoor localization and fiducial tracking on the HoloLens provides significantly less system lag in a relatively motionless scenario.ConclusionsWith ever more OST-HMDs appearing on the market, the proposed criteria could be used in the evaluation of their suitability for mixed reality surgical intervention. Currently, Microsoft HoloLens may be more suitable than ODG R-7 and Epson Moverio BT-200 for clinical usability in terms of the evaluated criteria. To the best of our knowledge, this is the first paper that presents a methodology and conducts experiments to evaluate and compare OST-HMDs for their use as object-anchored 2D-display during interventions.},
+	language = {en},
+	number = {6},
+	urldate = {2019-08-08},
+	journal = {International Journal of Computer Assisted Radiology and Surgery},
+	author = {Qian, Long and Barthel, Alexander and Johnson, Alex and Osgood, Greg and Kazanzides, Peter and Navab, Nassir and Fuerst, Bernhard},
+	month = jun,
+	year = {2017},
+	keywords = {Intervention, Mixed reality, Optical see-through head-mounted display, User study},
+	pages = {901--910},
+	file = {Springer Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\LKLI8AKZ\\Qian et al. - 2017 - Comparison of optical see-through head-mounted dis.pdf:application/pdf}
+}
