--- a/thesis.tex
+++ b/thesis.tex
@@ -2,6 +2,11 @@
 \documentclass{thesisclass}
 \usepackage[toc,page]{appendix}
 \usepackage{pdfpages} 
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.8}
+\usepgfplotslibrary{statistics}
+\usepackage{filecontents}
+\pgfplotsset{width=7cm,compat=1.16}
 \makeindex
 % Based on thesisclass.cls of Timo Rohrberg, 2009
 % ----------------------------------------------------------------
