--- a/thesis.tex
+++ b/thesis.tex
@@ -118,7 +118,8 @@ $\mbox{}$
 \newpage
 \thispagestyle{empty}
 \chapter*{\centering \iflanguage{english}{Abstract}{Zusammenfassung}}
-
+TODO
+%TODO
 Short description of motivation, methods, results and discussion
 
 
@@ -160,8 +161,8 @@ Short description of motivation, methods, results and discussion
 \cleardoublepage
 \listoffigures
 \addcontentsline{toc}{chapter}{List of Figures}
-\listofalgorithms
-\addcontentsline{toc}{chapter}{List of Algorithms}
+%\listofalgorithms
+%\addcontentsline{toc}{chapter}{List of Algorithms}
 \cleardoublepage
 
 %% --------------------
