--- a/bibliography.bib
+++ b/bibliography.bib
@@ -425,21 +425,14 @@ Augmented reality tools like X-Scope® may be helpful for controlling maxillary 
 }
 
 @article{shuhaiber_augmented_2004,
-	title = {Augmented {Reality} in {Surgery}},
-	volume = {139},
-	issn = {0004-0010},
-	url = {https://jamanetwork.com/journals/jamasurgery/fullarticle/396410},
-	doi = {10.1001/archsurg.139.2.170},
-	abstract = {{\textless}h3{\textgreater}Objective{\textless}/h3{\textgreater}{\textless}p{\textgreater}To evaluate the history and current knowledge of computer-augmented reality in the field of surgery and its potential goals in education, surgeon training, and patient treatment.{\textless}/p{\textgreater}{\textless}h3{\textgreater}Data Sources{\textless}/h3{\textgreater}{\textless}p{\textgreater}National Library of Medicine's database and additional library searches.{\textless}/p{\textgreater}{\textless}h3{\textgreater}Study Selection{\textless}/h3{\textgreater}{\textless}p{\textgreater}Only articles suited to surgical sciences with a well-defined aim of study, methodology, and precise description of outcome were included.{\textless}/p{\textgreater}{\textless}h3{\textgreater}Data Synthesis{\textless}/h3{\textgreater}{\textless}p{\textgreater}Augmented reality is an effective tool in executing surgical procedures requiring low-performance surgical dexterity; it remains a science determined mainly by stereotactic registration and ergonomics. Strong evidence was found that it is an effective teaching tool for training residents. Weaker evidence was found to suggest a significant influence on surgical outcome, both morbidity and mortality. No evidence of cost-effectiveness was found.{\textless}/p{\textgreater}{\textless}h3{\textgreater}Conclusions{\textless}/h3{\textgreater}{\textless}p{\textgreater}Augmented reality is a new approach in executing detailed surgical operations. Although its application is in a preliminary stage, further research is needed to evaluate its long-term clinical impact on patients, surgeons, and hospital administrators. Its widespread use and the universal transfer of such technology remains limited until there is a better understanding of registration and ergonomics.{\textless}/p{\textgreater}},
-	language = {en},
-	number = {2},
-	urldate = {2019-04-03},
-	journal = {Archives of Surgery},
-	author = {Shuhaiber, Jeffrey H.},
-	month = feb,
-	year = {2004},
-	pages = {170--174},
-	file = {Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\CEHND9NF\\Shuhaiber - 2004 - Augmented Reality in Surgery.pdf:application/pdf;Snapshot:C\:\\Users\\anton\\Zotero\\storage\\WP2739JE\\396410.html:text/html}
+	title={Augmented reality in surgery},
+  author={Shuhaiber, Jeffrey H},
+  journal={Archives of surgery},
+  volume={139},
+  number={2},
+  pages={170--174},
+  year={2004},
+  publisher={American Medical Association}
 }
 
 @article{wagner_virtual_1997,
@@ -1056,3 +1049,53 @@ Conclusions  Mobile, real-time, and point-of-care AR for clinical purposes pro
 	pages = {901--910},
 	file = {Springer Full Text PDF:C\:\\Users\\anton\\Zotero\\storage\\LKLI8AKZ\\Qian et al. - 2017 - Comparison of optical see-through head-mounted dis.pdf:application/pdf}
 }
+
+@article{khamene2003augmented,
+  title={An augmented reality system for MRI-guided needle biopsies},
+  author={Khamene, Ali and Wacker, Frank and Vogt, Sebastian and Azar, Fred and Wendt, Michael and Sauer, Frank and Lewin, Jonathan},
+  journal={Studies in health technology and informatics},
+  pages={151--157},
+  year={2003},
+  publisher={IOS Press; 1999}
+}
+
+@article{barsom2016systematic,
+  title={Systematic review on the effectiveness of augmented reality applications in medical training},
+  author={Barsom, EZ and Graafland, M and Schijven, MP},
+  journal={Surgical endoscopy},
+  volume={30},
+  number={10},
+  pages={4174--4183},
+  year={2016},
+  publisher={Springer}
+}
+
+@Article{Hansen2010,
+author="Hansen, Christian
+and Wieferich, Jan
+and Ritter, Felix
+and Rieder, Christian
+and Peitgen, Heinz-Otto",
+title="Illustrative visualization of 3D planning models for augmented reality in liver surgery",
+journal="International Journal of Computer Assisted Radiology and Surgery",
+year="2010",
+month="Mar",
+day="01",
+volume="5",
+number="2",
+pages="133--141",
+abstract="Augmented reality (AR) obtains increasing acceptance in the operating room. However, a meaningful augmentation of the surgical view with a 3D visualization of planning data which allows reliable comparisons of distances and spatial relations is still an open request.",
+issn="1861-6429",
+doi="10.1007/s11548-009-0365-3",
+url="https://doi.org/10.1007/s11548-009-0365-3"
+}
+
+@inproceedings{devernay2001towards,
+  title={Towards endoscopic augmented reality for robotically assisted minimally invasive cardiac surgery},
+  author={Devernay, Fr{\'e}d{\'e}ric and Mourgues, Fabien and Coste-Mani{\`e}re, {\`E}ve},
+  booktitle={Proceedings International Workshop on Medical Imaging and Augmented Reality},
+  pages={16--20},
+  year={2001},
+  organization={IEEE}
+}
+
