--- a/thesis.tex
+++ b/thesis.tex
@@ -101,7 +101,7 @@ $\mbox{}$\vspace{15cm}$\mbox{}$\\
 Ich versichere hiermit, die vorliegende Arbeit selbstständig angefertigt zu haben. Die verwendeten Hilfsmittel und Quellen sind im Literaturverzeichnis
 vollständig aufgeführt.\\
 $\mbox{}$\vspace{2cm}$\mbox{}$\\
-Dresden, den YY Monat, 20XX\\
+Dresden, den 03. September, 2019\\
 $\mbox{}$\vspace{1cm}$\mbox{}$\\
 $\mbox{}$\hfill \\
 $\mbox{}$
@@ -118,9 +118,15 @@ $\mbox{}$
 \newpage
 \thispagestyle{empty}
 \chapter*{\centering \iflanguage{english}{Abstract}{Zusammenfassung}}
-TODO
-%TODO
-Short description of motivation, methods, results and discussion
+
+\emph{Augmented Reality} (AR) bietet große Chancen im medizinischen Bereich. Sowohl in der minimalinvasiven, als auch der offenen Chirurgie ist es möglich, Chirurgen durch Augmented Reality zu unterstützen. Auch im Training angehender Chirurgen können AR-Systeme eingesetzt werden. \emph{Head Mounted Displays} (HMDs) ermöglichen das Anzeigen von Daten im Sichtfeld des Chirurgen, ohne dass dieser den Blick vom Patienten abwenden muss.
+
+\textbf{Methoden:} Ziel dieser Arbeit ist das Visualisieren der Leber an einem Phantom mit Hilfe von Augmented Reality ohne ein externes Trackingsystem. Die Visualisierung erfolgt mit Hilfe eines Head Mounted Displays und Tracking von \emph{Fiducials} an einem Phantom. Mit Hilfe der Fiducials wird die Lage des Phantoms im Raum bestimmt. Dazu muss der Offset zwischen Fiducials und Phantom bekannt sein. Zusätzlich wird ein Vorgehen zur Kalibrierung des Offsets der Fiducials entwickelt.
+
+\textbf{Evaluation:} Es wurde zur Evaluation eine Nutzerstudie durchgeführt. Die Probanden sollten eigenständig den Offset zwischen Fiducials und Phantom kalibrieren. Anschließend bewerteten sie ihre Kalibrierung und verglichen sie mit einer über ein externes Trackingsystem durchgeführte Kalibrierung. Die Kalibrierungen der Probanden wurden quantitativ ausgewertet.
+
+\textbf{Diskussion:} Das Ziel der Arbeit, ein 3D-Modell des Phantoms mit dem realen Objekt zu registrieren, wurde erreicht. Es konnte zum Tracken von Phantom und Hololens auf ein externes Trackingsystem verzichtet werden. Auch bei der Kalibrierung war es möglich, auf ein externes Trackingsystem zu verzichten.
+Durch Limitierungen in der Hardware, der Probanden und durch die nur prototypische Umsetzung der Anwendung war dennoch die Kalibrierung mit Hilfe eines externen Trackingsystems genauer. Es ist jedoch vorstellbar, dass mit den genannten Ansätzen zur Verbesserung der Anwendung ein ebenso gutes Ergebnis in der Kalibrierung mit der Hololens in Zukunft möglich ist.
 
 
 \newpage
